--- a/src/_includes/styles/post.css
+++ b/src/_includes/styles/post.css
@@ -53,7 +53,6 @@
 
 .read-on .preview {
   width: 100%;
-  z-index: -1;
 }
 
 #read-on {
